syntax = "proto3";

package pb;

option go_package = "simplebank/pb";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/field_behavior.proto";
import "account.proto";

message CreateAccountRequest {
  Currency currency = 1 [
    (google.api.field_behavior) = REQUIRED,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      enum: ["USD", "EUR", "GBP"],
      description: "Type of currency that will be used for this account. Note: you cannot change account's currency after creating it"
    }
  ];
}
